Fix bug #60516.  This should fix problems with named targets in the embedding widget. Patch from rusty.lynch@intel.com. r=adamlock sr=blizzard